adding content to documentation with swagger
